Initial BZC port

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,7 +12,7 @@
 }
 
 .YellowButton{
-  background-color: #ffd700 !important;
+  background-color: #339933 !important;
   color: #000000 !important;
   box-shadow: 2px 3px #404040 !important;
 }
